# HansLib

./: .editorconfig  .gitignore  BuildAll  CMakeLists.txt  CheckAllTests  CleanAll  Format  HansLib.sln  RebuildMakefiles  TreeTest.exe.gta.testdurations  ycm_extra_conf.py
BoundingBox/: BoundingBox.h  BoundingBox.vcxproj  BoundingBox.vcxproj.filters  CMakeLists.txt
BoundingBoxTest/: BoundingBoxTest.cpp  BoundingBoxTest.vcxproj  CMakeLists.txt
EigenValue/: CMakeLists.txt  EigenSolution.cpp  EigenSolution.h  EigenValue.vcxproj  EigenValue.vcxproj.filters  EigenValueSolverSym2x2.cpp  EigenValueSolverSym2x2.h  EigenValueSolverSym3x3.cpp  EigenValueSolverSym3x3.h
EigenValueTest/: CMakeLists.txt  EigenSolutionTest.cpp  EigenValueSolverSym2x2Test.cpp  EigenValueSolverSym3x3Test.cpp
Functions/: CMakeLists.txt  Functions.vcxproj  Functions.vcxproj.filters  HatFunction.h  IMultiVariableFunctionEvaluate.h  IMultiVariableRealValuedFunction.cpp  IMultiVariableRealValuedFunction.h  IRealFunction.h  IRealFunctionUtils.cpp  IRealFunctionUtils.h  ISingleVariableRealValuedFunction.h  ISingleVariableRealValuedFunctionUtils.cpp  ISingleVariableRealValuedFunctionUtils.h  MultiVariableFunctionEvaluateComposeWithSingle.cpp  MultiVariableFunctionEvaluateComposeWithSingle.h  MultiVariableFunctionEvaluateFlipped.cpp  MultiVariableFunctionEvaluateFlipped.h  MultiVariableFunctionEvaluateFrom01.cpp  MultiVariableFunctionEvaluateFrom01.h  MultiVariableFunctionExamples.cpp  MultiVariableFunctionExamples.h  MultiVariableMonomial.cpp  MultiVariableMonomial.h  MultiVariableMultiplicativeInverseFunction.cpp  MultiVariableMultiplicativeInverseFunction.h  MultiVariablePolynomial.cpp  MultiVariablePolynomial.h  MultiVariableProductFunction.cpp  MultiVariableProductFunction.h  MultiVariableRealValuedFunction.cpp  MultiVariableRealValuedFunction.h  MultiVariableRealValuedFunctionEvaluateCached.cpp  MultiVariableRealValuedFunctionEvaluateCached.h  MultiVariableRealValuedFunctionNoDerivatives.cpp  MultiVariableRealValuedFunctionNoDerivatives.h  MultiVariableVectorComponentFunction.cpp  MultiVariableVectorComponentFunction.h  MultiVariableVectorValuedFunction.cpp  MultiVariableVectorValuedFunction.h  RealFunctionAdd.cpp  (+17 more)
FunctionsTest/: CMakeLists.txt  FunctionsTest.vcxproj  HatFunctionTest.cpp  IRealFunctionUtilsTest.cpp  MultiVariableFunctionEvaluateFlippedTest.cpp  MultiVariableFunctionEvaluateFrom01Test.cpp  MultiVariableFunctionExamplesTest.cpp  MultiVariableMonomialTest.cpp  MultiVariableMultiplicativeInverseFunctionTest.cpp  MultiVariablePolynomialTest.cpp  MultiVariableProductFunctionTest.cpp  MultiVariableRealValuedFunctionEvaluateCachedTest.cpp  MultiVariableRealValuedFunctionNoDerivativesTest.cpp  MultiVariableRealValuedFunctionTest.cpp  MultiVariableVectorComponentFunctionTest.cpp  RealFunctionAddTest.cpp  RealFunctionComposeTest.cpp  RealFunctionNullTest.cpp  SingleVariableFunctionExamplesTest.cpp  SingleVariableFunctionOnIntervalTest.cpp  SingleVariableFunctionOnIntervalsTest.cpp  SingleVariableMonomialTest.cpp  SingleVariablePolynomialTest.cpp  SingleVariableRealValuedFunctionTest.cpp
Geometry/: Ball.cpp  Ball.h  Ball2AsRegion.cpp  Ball2AsRegion.h  CMakeLists.txt  DirectedEdge.h  DirectedEdge2AsManifold1.cpp  DirectedEdge2AsManifold1.h  DirectedEdgeIntersection.h  DirectedEdgeIntersections.cpp  DirectedEdgeIntersections.h  DirectedEdgeInterval.h  DirectedEdgePoint.cpp  DirectedEdgePoint.h  DirectedEdgeUtils.cpp  DirectedEdgeUtils.h  Geometry.vcxproj  Geometry.vcxproj.filters  GeometryBall.cpp  GeometryBall.h  GeometryDefines.h  GeometrySphere.cpp  GeometrySphere.h  Hyperplane.h  IDynamicUniquePointCollection.h  IGeometryObject.h  IGeometryPredicate.h  IGeometryRegion.h  IGeometryRegionTopology.h  IManifold.h  IManifold0.h  IManifold1.h  IManifold1D2.h  IManifold2.h  IManifoldId.h  IPointTransformation.h  IRegionManifolds.h  IUniquePointCollection.h  IntersectionDirectedEdges.h  Line.h  (+34 more)
GeometryTest/: Ball2AsRegionTest.cpp  BallTest.cpp  CMakeLists.txt  DirectedEdge2AsManifold1test.cpp  DirectedEdgeIntersectionsTest.cpp  DirectedEdgePointTest.cpp  DirectedEdgeTest.cpp  DirectedEdgeUtilsTest.cpp  GeometryTest.vcxproj  HyperplaneTest.cpp  IGeometryRegionTest.h  IManifold0Test.h  IManifold1D2Test.h  IManifold1Test.h  IManifoldTest.h  IRegionManifoldsTest.h  LineTest.cpp  LocalizationBinsTest.cpp  Manifold0Test.cpp  PointCloseTest.cpp  PointExactTest.cpp  PointReflectionTest.cpp  PointTest.cpp  PointTest.vcxproj  Polygon2AsManifold1Test.cpp  Polygon2AsRegionTest.cpp  Polygon2DTest.cpp  Rotate2DTest.cpp  SamePointPredicateTest.cpp  Sphere2AsManifold1Test.cpp  Sphere3AsManifold2Test.cpp  SphereTest.cpp  TetrahedronTest.cpp  TriangleTest.cpp  UniqueHashedPointCollectionTest.cpp  UniquePointCollectionBinningTest.cpp  UnitVectorTest.cpp
Graph/: :w  CMakeLists.txt  GraphDefines.h  GraphIsomorphismAllCompareFactories.cpp  GraphIsomorphismAllCompareFactories.h  GraphIsomorphismCharacteristicsComparers.cpp  GraphIsomorphismCharacteristicsComparers.h  GraphIsomorphismCheck.cpp  GraphIsomorphismCheck.h  GraphIsomorphismComparers.cpp  GraphIsomorphismComparers.h  GraphIsomorphismComparersFactory.cpp  GraphIsomorphismComparersFactory.h  GraphIsomorphismConstruct.cpp  GraphIsomorphismConstruct.h  GraphIsomorphismDecomposeNode.cpp  GraphIsomorphismDecomposeNode.h  GraphIsomorphismDecomposeTree.cpp  GraphIsomorphismDecomposeTree.h  GraphIsomorphismDefines.h  GraphIsomorphismGraphComparers.cpp  GraphIsomorphismGraphComparers.h  GraphIsomorphismGraphTagCompare.cpp  GraphIsomorphismGraphTagCompare.h  GraphIsomorphismGrouper.cpp  GraphIsomorphismGrouper.h  GraphIsomorphismGrouping.cpp  GraphIsomorphismGrouping.h  GraphIsomorphismStatus.cpp  GraphIsomorphismStatus.h  GraphIsomorphismTagCompare.cpp  GraphIsomorphismTagCompare.h  GraphIsomorphismTagFlyweight.cpp  GraphIsomorphismTagFlyweight.h  GraphIsomorphismTaggedGraph.cpp  GraphIsomorphismTaggedGraph.h  GraphIsomorphismTaggedGraphs.cpp  GraphIsomorphismTaggedGraphs.h  GraphIsomorphismTaggerChains.cpp  GraphIsomorphismTaggerChains.h  (+69 more)
GraphTest/: CMakeLists.txt  (+48 more)
(+861 files in other folders)
